# wot-map-bans

./: .editorconfig  .gitignore  docker-compose.yaml
api/: Cargo.toml  schema.json  sqlx-data.json
api/migrations/: 1_map.sql  2_mode.sql  3_server.sql  4_map_report.sql  4_played_map.sql
api/queries/: get_recent_maps.sql  insert_map_report.sql  insert_played_map.sql  select_current_maps.sql  select_current_servers.sql
api/schemas/: CreatePlayedMapPayload.json  GetCurrentMapsQuery.json  GetCurrentMapsResponse.json  GetCurrentServersResponse.json
api/src/: api_client.rs  auth.rs  context.rs  error.rs  main.rs  model.rs  openid_client.rs  regions.rs  router.rs  service.rs  util.rs
api/src/service/: api_client.rs  mod.rs  openid_client.rs  region.rs  regions.rs
api/src/util/: mod.rs  request_id.rs  validation.rs
api/src/wg/: api_client.rs  openid_client.rs
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/assets/: README.md
client/src/: App.tsx  CurrentMaps.tsx  constants.ts  context.tsx  index.tsx  util.ts
client/src/map/: Bases.tsx  Cross.tsx  Map.module.css  Map.tsx  UnknownMap.tsx  assets.ts  styles.module.css
client/src/service/: api.ts  auth.ts  context.tsx  errorHandler.ts  mod.ts  modController.ts
client/src/service/api/: index.ts  schema.ts
client/src/service/mod/: connection.ts  index.ts  message.ts
client/src/util/: browser.ts  error.ts  option.ts  types.ts
db/: test_data.sql
scripts/: extract_assets.py  requirements.txt
